--- a/.gitignore
+++ b/.gitignore
@@ -42,4 +42,21 @@ mydb/*
 .python-version
 *.db
 __pycache__/
-frontend/
+
+# testing
+/coverage
+
+# production
+/build/
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
